2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_action.php: fixed sustitution the
	values in the macros when load a action.
	
	Fixes: #3603125

2013-02-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.list.php,
	godmode/reporting/graph_builder.php, godmode/setup/news.php,
	godmode/setup/setup_general.php, godmode/netflow/nf_edit_form.php,
	godmode/db/db_purge.php, godmode/db/db_main.php,
	godmode/extensions.php, include/functions_reporting.php,
	operation/reporting/reporting_viewer.php: improved the source code
	style.
	
	* operation/reporting/reporting_xml.php, include/functions_xml.php:
	fixed the output of xml when have some html entities that is not
	as hexadecimal entities.

2013-02-04  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_events_replication.php: Added more info as
	the same as english one.

2013-02-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/functions_utils.php: fixed check color and legends
	for stacked graphs when haven't set colors all graphs.
	
	Fixes: #3602725

2013-02-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	include/functions_treeview.php: Delete server from
	detail of modules in treeview and other little fixes

	* include/functions_config.php: Added autocreation
	of some conf tokens when dont exist

	* include/help/en/help_events_replication.php
	include/help/es/help_events_replication.php: Added
	more info in the events replication help text

2013-02-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.list_items.php: fixed the
	autocomplete agent when edit or create a item for report that put
	the server name but now don't put anything.

2013-02-01  Junichi Satoh  <junichi@rworks.jp>

	* godmode/setup/setup.php: Fixed error without enterprise.
